[tool.poetry]
name = "abhi1693"
version = "0.0.1"
description = "A Python package for updating my github profile."
authors = ["Abhimanyu Saharan <desk.abhimanyu@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12"
requests = ">=2.31.0"
pyyaml = "^6.0.1"
jinja2 = "^3.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
